# Egde

./: Cargo.toml
src/: egui.rs  lib.rs  main.rs  render.rs  scene.rs  script.rs
src/render/: chunk_renderer.rs  g_buffer.rs  render_plane.rs
src/render/shaders/: chunk_shader.wgsl  render_plane.wgsl
src/scene/: camera.rs  chunk.rs  script.rs
src/scene/chunk/: chunk_content.rs
tests/: basic_scene.rs  simple_camera_controller.rs
