[package]
name = "egde"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
env_logger = "0.11.3"
glam = { version = "0.28.0", features = ["bytemuck"] }
image = "0.25.1"
pollster = "0.3.0"
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
uuid = { version = "1.10.0", features = ["v4"] }
wgpu = "0.20.1"
zip = "2.1.3"
